k8s/ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: dev-services
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-dev-services
spec:
  tls:
    - hosts:
        - baodoemoaks.com
      secretName: flask-ingress-tls-pd6d6
  rules:
    # - host: baodoemoaks.com
    - http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: flask-service
                port:
                  number: 80
